# sb

./: build_sphinx.sh  cvt2wav.sh
splitter/: CMakeLists.txt  splitter.cpp
test/: CMakeLists.txt  test.cpp
